**ClientPagerMessage
**ClientPublication
**InviteSession
**ServerInviteSession
**ServerPagerMessage
*Allow mutex lock while in DUM's main process loop for thread safety
*Added MasterProfile::removeSupportedMimeType method
*Implemented Handle::operator<, allowing for use with set or map
*Changed signature of ImsAuthUri methods to accomodate a username that includes the domain

===Bug fixes===
*Fixed problem where ReferredBy was set to contact instead of aor - 2 cases
*Calling Dialog::end() will now end subscription usages
*Fixed bug where MergedRequestKey::mCheckRequestUri was not being initialized in c'tor
*Fixed bug where receiving a response other than an INVITE/487 after a CANCEL was sent would not result in an onTerminated() callback
*Fixed leak in InviteSession that could caused if remote endpoint got the CSeq wrong on an INVITE/200
*Fixed bug in ClientSubscription::removeBinding that would remove all bindings except the one passed
*Fixed totally broken well-formedness check in DUM's main process loop
*Fixed assert bug caused by absence of a From-tag in a response from the wire
*Removing some unimplemented functions from DialogUsageManager.hxx

==repro==
===New features===
*Added some help text to the web admin for AddRoute
*Added command line option to repro to allow parallel forking to all Targets collected from static routes
*Allow location of database files to be configured
*Allow disabling of auth-int

===Bug fixes===
*Added locking to repro Store classes that have a local cache for thread safety
*Order of Routes works now
*Fixed bug where no response was forwarded back on a NIT timeout (was also causing a memory leak)
*Fixed bug where responses to a proxied request with an RFC 2543 transaction identifier would not be forwarded back (also was causing a memory leak)
*Fixed memory leak caused when a response to a proxied request came back with a different Via stack (except the topmost Via)